[package]
name = "promise-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde-wasm-bindgen = "*"
wasm-bindgen = "*"
js-sys = "*"
wasm-bindgen-futures = "*"

[dependencies.web-sys]
version = "*"
features = [ "Window", "Crypto", "SubtleCrypto", "AesKeyGenParams" ]

[lib]
crate-type = [ "cdylib" ]
